src/nar/terms/narsese.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    start: peg$parsestart,
  };
  let peg$startRuleFunction = peg$parsestart;

  const peg$c0 = "%";
  const peg$c1 = ";";
  const peg$c2 = ":";
  const peg$c3 = "--";
  const peg$c4 = "\u0394";
  const peg$c5 = "/\\";
  const peg$c6 = "\\";
  const peg$c7 = "/";
  const peg$c8 = "(";
  const peg$c9 = ",";
  const peg$c10 = ")";
  const peg$c11 = "<";
  const peg$c12 = ">";
  const peg$c13 = "-->";
  const peg$c14 = "<->";
  const peg$c15 = "==>";
  const peg$c16 = "<=>";
  const peg$c17 = "<~>";
  const peg$c18 = "=/>";
  const peg$c19 = "=|";
  const peg$c20 = "=/=";
  const peg$c21 = "=";
  const peg$c22 = "&&";
  const peg$c23 = "||";
  const peg$c24 = "&|";
  const peg$c25 = "&/";
  const peg$c26 = "&,";
  const peg$c27 = "|,";
  const peg$c28 = "-->,";
  const peg$c29 = "<->,";
  const peg$c30 = "==>,";
  const peg$c31 = "<=>,";
  const peg$c32 = "=>";
  const peg$c33 = "{";
  const peg$c34 = "}";
  const peg$c35 = "[";
  const peg$c36 = "]";
  const peg$c37 = "\"";
  const peg$c38 = "-";
  const peg$c39 = ".";

  const peg$r0 = /^[.!?@;]/;
  const peg$r1 = /^[&|]/;
  const peg$r2 = /^[^(){}<>.,!%?;:@ \t\n\r=&\/|>\-]/;
  const peg$r3 = /^[^"]/;
  const peg$r4 = /^[?$#*%]/;
  const peg$r5 = /^[^(){}<>.,!%?; \t\n\r=&\/|>\-]/;
  const peg$r6 = /^[0-9]/;
  const peg$r7 = /^[ \t\n\r]/;

  const peg$e0 = peg$otherExpectation("task");
  const peg$e1 = peg$classExpectation([".", "!", "?", "@", ";"], false, false, false);
  const peg$e2 = peg$literalExpectation("%", false);
  const peg$e3 = peg$literalExpectation(";", false);
  const peg$e4 = peg$otherExpectation("term");
  const peg$e5 = peg$literalExpectation(":", false);
  const peg$e6 = peg$literalExpectation("--", false);
  const peg$e7 = peg$literalExpectation("\u0394", false);
  const peg$e8 = peg$literalExpectation("/\\", false);
  const peg$e9 = peg$literalExpectation("\\", false);
  const peg$e10 = peg$literalExpectation("/", false);
  const peg$e11 = peg$literalExpectation("(", false);
  const peg$e12 = peg$literalExpectation(",", false);
  const peg$e13 = peg$literalExpectation(")", false);
  const peg$e14 = peg$literalExpectation("<", false);
  const peg$e15 = peg$literalExpectation(">", false);
  const peg$e16 = peg$literalExpectation("-->", false);
  const peg$e17 = peg$literalExpectation("<->", false);
  const peg$e18 = peg$literalExpectation("==>", false);
  const peg$e19 = peg$literalExpectation("<=>", false);
  const peg$e20 = peg$literalExpectation("<~>", false);
  const peg$e21 = peg$literalExpectation("=/>", false);
  const peg$e22 = peg$literalExpectation("=|", false);
  const peg$e23 = peg$literalExpectation("=/=", false);
  const peg$e24 = peg$literalExpectation("=", false);
  const peg$e25 = peg$literalExpectation("&&", false);
  const peg$e26 = peg$literalExpectation("||", false);
  const peg$e27 = peg$literalExpectation("&|", false);
  const peg$e28 = peg$literalExpectation("&/", false);
  const peg$e29 = peg$literalExpectation("&,", false);
  const peg$e30 = peg$literalExpectation("|,", false);
  const peg$e31 = peg$literalExpectation("-->,", false);
  const peg$e32 = peg$literalExpectation("<->,", false);
  const peg$e33 = peg$literalExpectation("==>,", false);
  const peg$e34 = peg$literalExpectation("<=>,", false);
  const peg$e35 = peg$literalExpectation("=>", false);
  const peg$e36 = peg$classExpectation(["&", "|"], false, false, false);
  const peg$e37 = peg$literalExpectation("{", false);
  const peg$e38 = peg$literalExpectation("}", false);
  const peg$e39 = peg$literalExpectation("[", false);
  const peg$e40 = peg$literalExpectation("]", false);
  const peg$e41 = peg$otherExpectation("atomic term");
  const peg$e42 = peg$classExpectation(["(", ")", "{", "}", "<", ">", ".", ",", "!", "%", "?", ";", ":", "@", " ", "\t", "\n", "\r", "=", "&", "/", "|", ">", "-"], true, false, false);
  const peg$e43 = peg$literalExpectation("\"", false);
  const peg$e44 = peg$classExpectation(["\""], true, false, false);
  const peg$e45 = peg$otherExpectation("variable");
  const peg$e46 = peg$classExpectation(["?", "$", "#", "*", "%"], false, false, false);
  const peg$e47 = peg$classExpectation(["(", ")", "{", "}", "<", ">", ".", ",", "!", "%", "?", ";", " ", "\t", "\n", "\r", "=", "&", "/", "|", ">", "-"], true, false, false);
  const peg$e48 = peg$otherExpectation("float");
  const peg$e49 = peg$literalExpectation("-", false);
  const peg$e50 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e51 = peg$literalExpectation(".", false);
  const peg$e52 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);

  function peg$f0(content) {    return content;  }
  function peg$f1(term, punc, truth) {
    let taskType = 'BELIEF';
    if (punc === '?') taskType = 'QUESTION';
    else if (punc === '!') taskType = 'GOAL';
    else if (punc === '@') taskType = 'QUEST';
    else if (punc === ';') taskType = 'COMMAND';
    
    return {
      term: term,
      punctuation: punc,
      truthValue: truth,
      taskType: taskType
    };
  }
  function peg$f2(punc) {    return punc;  }
  function peg$f3(f, c) {
    if (f < 0 || f > 1 || c < 0 || c > 1) {
      error(`Truth values out of range: frequency=${f} (0-1), confidence=${c} (0-1)`);
    }
    return { frequency: f, confidence: c };
  }
  function peg$f4(f) {
    if (f < 0 || f > 1) {
      error(`Frequency value out of range: ${f} (should be 0-1)`);
    }
    return { frequency: f, confidence: 0.9 };
  }
  function peg$f5(pred, subj) {
    return options.termFactory.inheritance(subj, pred);
  }
  function peg$f6(term) {    return options.termFactory.negation(term);  }
  function peg$f7(term) {    return options.termFactory.delta(term);  }
  function peg$f8(term) {    return options.termFactory.delta(term);  }
  function peg$f9() {    return options.termFactory.atom('\\');  }
  function peg$f10() {    return options.termFactory.atom('/');  }
  function peg$f11(op, components) {
    return options.termFactory.create(op, components);
  }
  function peg$f12(operator, components) {
    return options.termFactory.create(operator.kind, components || []);
  }
  function peg$f13(components) {
    return options.termFactory.tuple(components || []);
  }
  function peg$f14(subject, op, predicate) {
    return options.termFactory.create(op.trim(), [subject, predicate]);
  }
  function peg$f15(subject, op, predicate) {
    return options.termFactory.create(op.trim(), [subject, predicate]);
  }
  function peg$f16(op) {
    return op.endsWith(',') ? op.slice(0, -1) : op;
  }
  function peg$f17(op) {
    return op;
  }
  function peg$f18(components) {    return options.termFactory.setExt(components || []);  }
  function peg$f19(components) {    return options.termFactory.setInt(components || []);  }
  function peg$f20(head, tail) {
    const terms = [head];
    if (tail) {
      for (const t of tail) {
        terms.push(t[3]);
      }
    }
    return terms;
  }
  function peg$f21(chars) {    return options.termFactory.atom(chars);  }
  function peg$f22(chars) {    return options.termFactory.atom('"' + chars + '"');  }
  function peg$f23(varName) {    return options.termFactory.atom(varName);  }
  function peg$f24(val) {    return parseFloat(val);  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseTask();
    if (s2 === peg$FAILED) {
      s2 = peg$parseTerm();
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTask() {
    let s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseTerm();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsePunctuation();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseTruthValue();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f1(s1, s2, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }

    return s0;
  }

  function peg$parsePunctuation() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = input.charAt(peg$currPos);
    if (peg$r0.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f2(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTruthValue() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.charCodeAt(peg$currPos) === 37) {
      s2 = peg$c0;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseFloat();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 59) {
          s6 = peg$c1;
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s6 !== peg$FAILED) {
          s7 = peg$parse_();
          s8 = peg$parseFloat();
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 37) {
              s10 = peg$c0;
              peg$currPos++;
            } else {
              s10 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
            if (s10 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f3(s4, s8);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 37) {
        s2 = peg$c0;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        s4 = peg$parseFloat();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 37) {
            s6 = peg$c0;
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s6 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f4(s4);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseTerm() {
    let s0, s1;

    peg$silentFails++;
    s0 = peg$parseStatement();
    if (s0 === peg$FAILED) {
      s0 = peg$parseCompactInheritance();
      if (s0 === peg$FAILED) {
        s0 = peg$parseNegationTerm();
        if (s0 === peg$FAILED) {
          s0 = peg$parseDeltaTerm();
          if (s0 === peg$FAILED) {
            s0 = peg$parseCompoundTerm();
            if (s0 === peg$FAILED) {
              s0 = peg$parseSet();
              if (s0 === peg$FAILED) {
                s0 = peg$parseVariable();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseImagePlaceholder();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseAtomicTerm();
                  }
                }
              }
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }

    return s0;
  }

  function peg$parseCompactInheritance() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseAtomicTerm();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 58) {
        s2 = peg$c2;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseTerm();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f5(s1, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNegationTerm() {
    let s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseTerm();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f6(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDeltaTerm() {
    let s0, s1, s2;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 916) {
      s1 = peg$c4;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseTerm();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f7(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c5) {
        s1 = peg$c5;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e8); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseTerm();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f8(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseImagePlaceholder() {
    let s0, s1;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 92) {
      s1 = peg$c6;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f9();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 47) {
        s1 = peg$c7;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e10); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f10();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseCompoundTerm() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
